--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all",
+    "ie 11"
+  ],
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -60,6 +66,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
